[gd_scene load_steps=21 format=3]

[ext_resource type="Script" path="res://player/player.gd" id="1_movka"]
[ext_resource type="Texture2D" uid="uid://bphwxf2glq4lt" path="res://player/art/Main Ship - Base - Full health.png" id="2_82vat"]
[ext_resource type="AudioStream" uid="uid://nlyop6gwuta3" path="res://audio/sfx_laser2.wav" id="3_w60rq"]
[ext_resource type="PackedScene" uid="uid://bdial7eisluqr" path="res://weapons/laser/lasers.tscn" id="4_u6hlg"]
[ext_resource type="Texture2D" uid="uid://cbvd0akbplwuy" path="res://random_shit/Fire Effect and Bullet 16x16.png" id="5_ax2dk"]

[sub_resource type="Gradient" id="Gradient_l2rai"]
offsets = PackedFloat32Array(0, 0.519164, 1)
colors = PackedColorArray(1, 1, 0, 0, 1, 0.545098, 0, 1, 1, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_km8g0"]
gradient = SubResource("Gradient_l2rai")

[sub_resource type="Curve" id="Curve_wy8c6"]
_data = [Vector2(0, 1), 0.0, -1.44444, 0, 0, Vector2(1, 0), 0.944445, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_mlh63"]
curve = SubResource("Curve_wy8c6")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_oux0u"]
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
spread = 15.73
gravity = Vector3(0, 0, 0)
initial_velocity_min = 300.0
initial_velocity_max = 500.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 5.0
scale_max = 6.0
scale_curve = SubResource("CurveTexture_mlh63")
color_ramp = SubResource("GradientTexture1D_km8g0")
turbulence_noise_strength = 3.34
attractor_interaction_enabled = false

[sub_resource type="AtlasTexture" id="AtlasTexture_5i5aw"]
atlas = ExtResource("5_ax2dk")
region = Rect2(160, 156, 16, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dmf8"]
atlas = ExtResource("5_ax2dk")
region = Rect2(176, 156, 16, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gnwd"]
atlas = ExtResource("5_ax2dk")
region = Rect2(192, 156, 16, 52)

[sub_resource type="SpriteFrames" id="SpriteFrames_4dyl0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5i5aw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dmf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gnwd")
}],
"loop": true,
"name": &"fire_engine",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_yshd3"]
radius = 19.0263

[sub_resource type="Animation" id="Animation_ojn0b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedEngineFx:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedEngineFx:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_15xhh"]
resource_name = "out_of_health"
length = 2.0
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t0ah1"]
_data = {
"RESET": SubResource("Animation_ojn0b"),
"out_of_health": SubResource("Animation_15xhh")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b8qbo"]
radius = 8.49275
height = 45.5974

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wmnpl"]
radius = 9.05517
height = 32.2483

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 2
motion_mode = 1
script = ExtResource("1_movka")
fire_vibration_weak_magnitude = 0.1
fire_vibration_strong_magnitude = 0.1
fire_vibration_length = 0.1

[node name="EngineFX" type="GPUParticles2D" parent="."]
position = Vector2(0, 19)
emitting = false
amount = 100
process_material = SubResource("ParticleProcessMaterial_oux0u")
lifetime = 0.2
fixed_fps = 60
trail_lifetime = 0.1

[node name="AnimatedEngineFx" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 45)
rotation = 3.12458
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_4dyl0")
animation = &"fire_engine"
frame_progress = 0.419379

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_82vat")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_yshd3")

[node name="LaserContainer" type="Node" parent="."]

[node name="WeaponSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_w60rq")
volume_db = -20.0
pitch_scale = 2.25

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t0ah1")
}

[node name="Weapons" type="Node2D" parent="."]

[node name="Lasers" parent="Weapons" instance=ExtResource("4_u6hlg")]

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-11, 1)
rotation = 0.790763
shape = SubResource("CapsuleShape2D_b8qbo")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(14, 9)
rotation = -1.35329
shape = SubResource("CapsuleShape2D_wmnpl")

[connection signal="timeout" from="FireRateTimer" to="." method="_on_fire_rate_timer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
